[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "hf-xet>=1.1.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "nltk>=3.9.1",
    "pypdf>=5.6.0",
    "sentence-transformers>=4.1.0",
    "weaviate>=0.1.2",
    "weaviate-client==3.26.7",
]
